--- a/css/style.css
+++ b/css/style.css
@@ -3,48 +3,58 @@
     padding: 0;
     margin: 0;
 }
-
 body {
     background-color: #d9dcd6;
-}
-
-.header {
-    padding: 20px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: #2a607c;
     color: #ffffff;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-.header h1 {
-    display: inline-block;
-    font-size: 48px;
+/*Apply Style to HEADER*/
+/*HEADER START*/
+header {
+    padding: 20px;
+    background-color: #2a607c;
 }
 
-.header h1 .seo {
+.seo {
     color: #d9dcd6;
 }
 
-.header div {
-    padding-top: 15px;
-    margin-right: 20px;
+header h1 {
+    font-weight: bold;
+    font-size: 48px;
+    color: #ffffff;
+    display: inline-block;
+    margin: 0;
+}
+
+header a {
+    text-decoration: none;
+    color: #ffffff;
+}
+
+header nav {
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
 
-.header div ul {
+header ul {
     list-style-type: none;
+    margin: 14px;
+    padding: 0;
 }
 
-.header div ul li {
+header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
 
-a {
+header nav ul li a {
     color: #ffffff;
     text-decoration: none;
 }
+/*END OF HEADER*/
 
 p {
     font-size: 16px;
