--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ header nav ul li a {
 p {
     font-size: 16px;
 }
-
+/*HERO STYLE STARTS*/
 .hero {
     height: 800px;
     width: 100%;
@@ -68,22 +68,43 @@ p {
     background-size: cover;
     background-position: center;
 }
+/*HERO STYLE ENDS*/
 
-.float-left {
+/*SETTING UP ARTICLES*/
+.offer img {
+    max-height: 200px;
     float: left;
-    margin-right: 25px;
 }
 
-.float-right {
-    float: right;
-    margin-left: 25px;
+.offer {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
 }
 
-.content {
-    width: 75%;
-    display: inline-block;
-    margin-left: 20px;
+.text-right {
+    text-align: right; 
 }
+
+.text-left {
+    text-align: left;
+}
+
+.offer-detail {
+    padding: 35px;
+    float: left;
+    width: 65%;
+}
+
+.offer-detail h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
+/*END OF ARTICLES*/
 
 .benefits {
     margin-right: 20px;
@@ -142,60 +163,6 @@ p {
     display: block;
     margin: 10px auto;
     max-width: 150px;
-}
-
-.search-engine-optimization {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img {
-    max-height: 200px;
-}
-
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
 }
 
 .footer {
