--- a/css/style.css
+++ b/css/style.css
@@ -3,17 +3,14 @@
     padding: 0;
     margin: 0;
 }
-body {
-    background-color: #d9dcd6;
-    color: #ffffff;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-}
 
 /*Apply Style to HEADER*/
 /*HEADER START*/
 header {
     padding: 20px;
     background-color: #2a607c;
+    color: #ffffff;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .seo {
@@ -21,14 +18,11 @@ header {
 }
 
 header h1 {
-    font-weight: bold;
     font-size: 48px;
-    color: #ffffff;
     display: inline-block;
-    margin: 0;
 }
 
-header a {
+a {
     text-decoration: none;
     color: #ffffff;
 }
@@ -37,22 +31,17 @@ header nav {
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
+    padding-top: 15px;
+    margin-right: 20px;
 }
 
 header ul {
     list-style-type: none;
-    margin: 14px;
-    padding: 0;
 }
 
 header nav ul li {
     display: inline-block;
     margin-left: 25px;
-}
-
-header nav ul li a {
-    color: #ffffff;
-    text-decoration: none;
 }
 /*END OF HEADER*/
 
@@ -71,41 +60,43 @@ p {
 /*HERO STYLE ENDS*/
 
 /*SETTING UP ARTICLES*/
-.offer img {
-    max-height: 200px;
-    float: left;
+.main-content {
+    width: 75%;
+    display: inline-block;
+    margin-left: 20px; 
 }
 
-.offer {
+.content img {
+    max-height: 200px;
+}
+
+.content {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
+    overflow: auto;
 }
 
-.text-right {
-    text-align: right; 
+.float-right {
+    float: right;
+    margin-left: 25px;
 }
 
-.text-left {
-    text-align: left;
-}
-
-.offer-detail {
-    padding: 35px;
+.float-left {
     float: left;
-    width: 65%;
+    margin-right: 25px;
 }
 
-.offer-detail h2 {
+.content h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
-
 /*END OF ARTICLES*/
 
+/*START BENEFITS SECTION*/
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -116,62 +107,24 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
-
-.benefit-lead {
+.benefit {
     margin-bottom: 32px;
     color: #ffffff;
 }
-
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
+.benefits h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
+.benefits img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.footer {
+/*FOOTER*/
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
-}
-
-.footer h2 {
-    font-size: 20px;
 }
